<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.allinone.gpa_12.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textColor="	#000000"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="7sp"/>
    <Button
        android:id="@+id/calculate"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:text="@string/Calculate_Gpa"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:layout_marginTop="15sp"
        android:textAllCaps="false"
        android:background="#EE82EE"
        android:onClick="calc_gpa"/>
    <Button
        android:id="@+id/keep"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/Keep_gpa"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:background="#EE82EE"
        android:onClick="keep_gpa"/>
    <Button
        android:id="@+id/azkary"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/azkary"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:background="#EE82EE"
        android:onClick="azkary"/>
    <Button
        android:id="@+id/schedule"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/schedule"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:background="#EE82EE"
        android:onClick="schedule"/>
    <Button
        android:id="@+id/setting"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/setting"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:background="#EE82EE"
        android:onClick="setting"/>
    <Button
        android:id="@+id/help"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/help"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:background="#EE82EE"
        android:onClick="help"/>
    <Button
        android:id="@+id/exit"
        android:layout_width="200sp"
        android:layout_height="50sp"
        android:layout_gravity="center"
        android:text="@string/exit"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:layout_marginTop="10sp"
        android:background="#EE82EE"
        android:onClick="exit"/>


</LinearLayout>
